fix: Change in the z-index levels that prevents other elements from showing above the navbar

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -41,7 +41,7 @@ h1 {
   transition: all ease-in 0.4s;
   @include respond(smobile) {
     position: absolute;
-    z-index: 1000;
+    z-index: 1012;
     width: 0px;
     left: -250px;
     display: block;
@@ -81,7 +81,7 @@ h1 {
     float: left;
     height: 30px;
     width: 30px;
-    z-index: 1001;
+    z-index: 1013;
   }
   .bar {
     top: 0;
@@ -140,6 +140,7 @@ h1 {
   background-color: rgba(0, 0, 0, 0.8);
   transition: left 0.3s ease;
   opacity: 0;
+  z-index: 1011;
 }
 .opacity--overlay.open {
   left: 0;
